--- a/SourceCode/13_Mar_2016/EBROnline/Web.config
+++ b/SourceCode/13_Mar_2016/EBROnline/Web.config
@@ -111,7 +111,7 @@
 
   <connectionStrings>
     <remove name="EBROnlineEntities" />
-    <add name="EBROnlineEntities" connectionString="metadata=res://*/Entities.EBROnlineModel.csdl|res://*/Entities.EBROnlineModel.ssdl|res://*/Entities.EBROnlineModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=thientt;initial catalog=ACP_REPORTS;user id=sa;password=@abc123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EBROnlineEntities" connectionString="metadata=res://*/Entities.EBROnlineModel.csdl|res://*/Entities.EBROnlineModel.ssdl|res://*/Entities.EBROnlineModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=THIENTT-LAPTOP\SQLSERVER2016;initial catalog=ACP_REPORTS;user id=sa;password=@abc123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="EBROnlineEntities" connectionString="metadata=res://*/Entities.EBROnlineModel.csdl|res://*/Entities.EBROnlineModel.ssdl|res://*/Entities.EBROnlineModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=THIENTRAN1607\SQLEXPRESS;initial catalog=ACP_REPORTS;user id=sa;password=@abc123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
 
